[project]
name = "tds-hello-vignesh"
version = "0.2.0"
description = "A tiny greeter library from TDS 2026 at IIT Madras."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "S. Vignesh", email = "24f2007157@ds.study.iitm.ac.in" }]
keywords = ["tds", "iit-madras", "greeter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = []

[tool.ruff.format]
preview = true

[project.urls]
Homepage = "https://github.com/24f2007157/tds-hello-vignesh"
Issues = "https://github.com/24f2007157/tds-hello-vignesh/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8"]
